--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ExpenseTracker - Manage Your Finances</title>
-    <meta name="description" content="Track your income and expenses with our beautiful, easy-to-use expense tracker app" />
-    <meta name="author" content="ExpenseTracker" />
+  <title>ExpenseTracker - Manage Your Finances</title>
+  <meta name="description" content="Track your income and expenses with our beautiful, easy-to-use expense tracker app" />
+  <meta name="author" content="ExpenseTracker" />
 
-    <meta property="og:title" content="ExpenseTracker - Manage Your Finances" />
-    <meta property="og:description" content="Track your income and expenses with our beautiful, easy-to-use expense tracker app" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/expense-favicon.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:title" content="ExpenseTracker - Manage Your Finances" />
+  <meta property="og:description" content="Track your income and expenses with our beautiful, easy-to-use expense tracker app" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/expense-favicon.svg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@ExpenseTracker" />
+  <meta name="twitter:image" content="/expense-favicon.svg" />
   </head>
 
   <body>
